; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_ipc_tt.c_port_name_to_task.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_ipc_tt.c_port_name_to_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TASK_NULL = common dso_local global i32 0, align 4
@MACH_MSG_TYPE_COPY_SEND = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @port_name_to_task(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* @TASK_NULL, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @MACH_PORT_VALID(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %31

11:                                               ; preds = %1
  %12 = call i32 (...) @current_space()
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %15 = call i64 @ipc_object_copyin(i32 %12, i32 %13, i32 %14, i32* %4)
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* @KERN_SUCCESS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = load i32, i32* @TASK_NULL, align 4
  store i32 %20, i32* %2, align 4
  br label %33

21:                                               ; preds = %11
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @convert_port_to_task(i32 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i64 @IP_VALID(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %21
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @ipc_port_release_send(i32 %28)
  br label %30

30:                                               ; preds = %27, %21
  br label %31

31:                                               ; preds = %30, %1
  %32 = load i32, i32* %6, align 4
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %31, %19
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @MACH_PORT_VALID(i32) #1

declare dso_local i64 @ipc_object_copyin(i32, i32, i32, i32*) #1

declare dso_local i32 @current_space(...) #1

declare dso_local i32 @convert_port_to_task(i32) #1

declare dso_local i64 @IP_VALID(i32) #1

declare dso_local i32 @ipc_port_release_send(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
